# qudt-parsing

./: .env_example  Idea.drawio  README.md  pyproject.toml
data/: new_non_prefixed_base_composed_units.json  qudt_fixed_units.json  qudt_missing_units.json
src/qudt_parsing/: ensure_dependencies.py  main.py
